// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Login page should render correctly 1`] = `
<ContextProvider
  value={
    Object {
      "store": Object {
        "clearActions": [Function],
        "dispatch": [Function],
        "getActions": [Function],
        "getState": [Function],
        "replaceReducer": [Function],
        "subscribe": [Function],
      },
      "subscription": Subscription {
        "handleChangeWrapper": [Function],
        "listeners": Object {
          "clear": [Function],
          "get": [Function],
          "notify": [Function],
          "subscribe": [Function],
        },
        "onStateChange": [Function],
        "parentSub": undefined,
        "store": Object {
          "clearActions": [Function],
          "dispatch": [Function],
          "getActions": [Function],
          "getState": [Function],
          "replaceReducer": [Function],
          "subscribe": [Function],
        },
        "unsubscribe": [Function],
      },
    }
  }
>
  <LoginForm
    match={
      Object {
        "isExact": true,
        "params": Object {
          "email": "aa",
          "password": "aa",
        },
        "path": "",
        "url": "",
      }
    }
    password={Object {}}
    username={Object {}}
  />
</ContextProvider>
`;

exports[`Login page should render correctly in mode 1`] = `
<ContextProvider
  value={
    Object {
      "store": Object {
        "clearActions": [Function],
        "dispatch": [Function],
        "getActions": [Function],
        "getState": [Function],
        "replaceReducer": [Function],
        "subscribe": [Function],
      },
      "subscription": Subscription {
        "handleChangeWrapper": [Function],
        "listeners": Object {
          "clear": [Function],
          "get": [Function],
          "notify": [Function],
          "subscribe": [Function],
        },
        "onStateChange": [Function],
        "parentSub": undefined,
        "store": Object {
          "clearActions": [Function],
          "dispatch": [Function],
          "getActions": [Function],
          "getState": [Function],
          "replaceReducer": [Function],
          "subscribe": [Function],
        },
        "unsubscribe": [Function],
      },
    }
  }
>
  <Connect(LoginForm) />
</ContextProvider>
`;

exports[`Login page should render correctly in mode 2`] = `
<div
  className="landing-page-container"
>
  <NHSHeader />
  <form
    action="javascript:void(0)"
    className="login-form"
    noValidate={true}
    onSubmit={[Function]}
  >
    <div
      className="input-container"
    >
      <div
        class="row"
      >
        <div
          class="block"
        >
          <input
            autoComplete="off"
            maxLength={40}
            onChange={[Function]}
            placeholder="Email"
            type="email"
          />
          <ErrorText />
        </div>
        <div
          class="block2"
        >
          <span
            className="glyphicon glyphicon-envelope "
          />
        </div>
      </div>
    </div>
    <div
      className="input-container"
    >
      <div
        class="row"
      >
        <div
          class="block"
        >
          <input
            autoComplete="off"
            maxLength={40}
            name="Password"
            onChange={[Function]}
            placeholder="Password"
            type="password"
          />
          <ErrorText />
        </div>
        <div
          class="block2"
        >
          <span
            className="glyphicon glyphicon-lock"
          />
        </div>
      </div>
    </div>
    <div
      style={
        Object {
          "content": " ",
          "marginLeft": -15,
          "marginRight": -15,
        }
      }
    >
      <Link
        className="btn btn-link"
        to="/register"
      >
        Register
      </Link>
      <div
        className="button-container"
      >
        <button
          className="btnSubmit"
          type="submit"
        >
          Sign In
        </button>
      </div>
    </div>
  </form>
  <NHSFooter />
</div>
`;
